force-app/main/default/objects/FIN_Change_Log__c/FIN_Change_Log__c.object-meta.xml
<CustomObject>
    <description>This object captures changes from Backoffice system changed data from previous loads on Sales,Payment,Payment Distribution</description>
    <label>FIN Change Log</label>
    <nameField>
        <displayFormat>ChgLog-{0000}</displayFormat>
        <label>FIN Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIN Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>