force-app/main/default/objects/FIN_Change_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>