force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Change_Date__c</fullName>
    <label>Change Date</label>
    <length>37</length>
    <type>Text</type>
</CustomField>