force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Change_Input__c.field-meta.xml
<CustomField>
    <fullName>FIN_Change_Input__c</fullName>
    <label>Change Input</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_Change_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>client_name</fullName>
            </value>
            <value>
                <fullName>method_of_delivery_type</fullName>
            </value>
            <value>
                <fullName>context_name</fullName>
            </value>
            <value>
                <fullName>event_end_date</fullName>
            </value>
            <value>
                <fullName>event_lookup</fullName>
            </value>
            <value>
                <fullName>event_start_date</fullName>
            </value>
            <value>
                <fullName>fee_name</fullName>
            </value>
            <value>
                <fullName>payment_plan_name</fullName>
            </value>
            <value>
                <fullName>outlet</fullName>
            </value>
            <value>
                <fullName>price_code_type</fullName>
            </value>
            <value>
                <fullName>venue_name</fullName>
            </value>
            <value>
                <fullName>venue_state</fullName>
            </value>
            <value>
                <fullName>zone_type_description</fullName>
            </value>
            <value>
                <fullName>zone_class</fullName>
            </value>
            <value>
                <fullName>Revenue Center Name</fullName>
            </value>
            <value>
                <fullName>Revenue Center Code</fullName>
            </value>
            <value>
                <fullName>Price Component Name 1</fullName>
            </value>
            <value>
                <fullName>Price Component Name 2</fullName>
            </value>
            <value>
                <fullName>Price Component Name 3</fullName>
            </value>
            <value>
                <fullName>Price Component Name 4</fullName>
            </value>
            <value>
                <fullName>Price Component Name 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>