force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Change_Object__c.field-meta.xml
<CustomField>
    <fullName>FIN_Change_Object__c</fullName>
    <label>Change Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Delivery Method</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Price Code</fullName>
            </value>
            <value>
                <fullName>Price Component</fullName>
            </value>
            <value>
                <fullName>Revenue Center</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>