force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Change_User__c.field-meta.xml
<CustomField>
    <fullName>FIN_Change_User__c</fullName>
    <label>Change User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>