force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Change_Value_Before__c.field-meta.xml
<CustomField>
    <fullName>FIN_Change_Value_Before__c</fullName>
    <label>Change Value Before</label>
    <length>125</length>
    <type>Text</type>
</CustomField>