force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Context_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context_ID__c</fullName>
    <label>Context ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>