force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Context_Name__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context_Name__c</fullName>
    <label>Context Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>