force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Object_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object_Description__c</fullName>
    <label>Object Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>