force-app/main/default/objects/FIN_Change_Log__c/fields/FIN_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object_ID__c</fullName>
    <label>Object ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>