force-app/main/default/objects/FIN_Change_Log__c/fields/HerokuExtId__c.field-meta.xml
<CustomField>
    <fullName>HerokuExtId__c</fullName>
    <externalId>true</externalId>
    <label>HerokuExtId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>