force-app/main/default/objects/FIN_Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Change_Object__c</columns>
    <columns>FIN_Change_Date__c</columns>
    <columns>FIN_Change_User__c</columns>
    <columns>FIN_Change_Value_Before__c</columns>
    <columns>FIN_Change_Value_After__c</columns>
    <columns>Action__c</columns>
    <columns>FIN_Context_Name__c</columns>
    <columns>FIN_Object_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>